tests/NormalTests/paczka2/big_fuzzy/44672512.err
Error in line 2: LIF A959 96,1
Error in line 4: IK7y8PQyrQ S543 69,4
Error in line 7: IK7y8PQyrQ A959 44,0
Error in line 9: IK7y8PQyrQ S488 44,6
Error in line 6: LIF S89 68,4
Error in line 23: pejrWea90 S488 51,1
Error in line 22: 1In S488 56,5
Error in line 32: 1In S89 83,0
Error in line 27: pejrWea90 A959 26,9
Error in line 41: pejrWea90 S543 31,5
Error in line 45: IK7y8PQyrQ A959 92,0
Error in line 42: S488 A959 102,1
Error in line 51: 1In S488 10,0
Error in line 65: 1In A959 14,3
Error in line 69: 1In S543 58,6
Error in line 76: LIF S543 50,8
Error in line 77: qgi0adN S488 26,7
Error in line 73: IK7y8PQyrQ S488 51,4
Error in line 99: RWdMPz S89 84,3
Error in line 83: pejrWea90 S89 76,7
Error in line 119: 1In A959 86,9
Error in line 121: 1In S543 74,2
Error in line 127: 1In A959 16,4
Error in line 130: pejrWea90 A959 30,9
Error in line 139: LIF S543 68,0
Error in line 135: 1In S89 348,6
Error in line 147: 1In A959 41,6
Error in line 148: S488 S488 97,9
Error in line 150: S488 S89 69,0
Error in line 152: S488 S543 3,0
Error in line 156: RWdMPz S89 21,1
Error in line 175: RWdMPz S543 11,86
Error in line 178: 1In S543 89,9
Error in line 173: RWdMPz S488 16,8
Error in line 191: RWdMPz S543 36,5
Error in line 193: RWdMPz A959 32,5
Error in line 190: S488 A959 49,9
Error in line 194: RWdMPz S543 54,5
Error in line 195: S488 S89 25,1
Error in line 198: 1In A959 22,3
Error in line 212: 1In S89 33,4
Error in line 206: RWdMPz A959 22,6
Error in line 213: LIF S89 5,5
Error in line 215: 1In S488 16,1
Error in line 221: RWdMPz S89 76,2
Error in line 219: LIF S543 20,3
Error in line 220: 1In S89 5,3
Error in line 232: 1In S488 84,6
Error in line 237: IK7y8PQyrQ A959 34,6
Error in line 204: qgi0adN A959 1,7
